# guild-log-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  .venv_aliases  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
logs/: README.md
output/: README.md
plots/: README.md
requirements/: base.txt  dev.txt  test.txt
scripts/: analyze  venv.sh
src/guild_log_analysis/: __init__.py  cli.py  main.py
src/guild_log_analysis/analysis/: __init__.py  base.py  registry.py
src/guild_log_analysis/analysis/bosses/: __init__.py  example_boss.py  one_armed_bandit.py  sprocketmonger_lockenstock.py
src/guild_log_analysis/api/: __init__.py  auth.py  client.py  exceptions.py
src/guild_log_analysis/config/: __init__.py  constants.py  logging_config.py  settings.py  spells.yaml
src/guild_log_analysis/plotting/: __init__.py  base.py  multi_line.py  styles.py
src/guild_log_analysis/utils/: __init__.py  cache.py  helpers.py
tests/: README.md  __init__.py  conftest.py
tests/data/: README.md
tests/fixtures/: README.md
tests/integration/: __init__.py  test_full_analysis.py
tests/output/: README.md
tests/unit/: __init__.py  test_cli.py  test_main.py
tests/unit/test_analysis/: __init__.py  test_base.py  test_example_boss.py  test_one_armed_bandit.py  test_registry.py  test_role_filtering.py
tests/unit/test_api/: __init__.py  test_auth.py  test_client.py  test_exceptions.py
tests/unit/test_config/: test_settings.py
tests/unit/test_plotting/: __init__.py  test_base.py  test_multi_line.py
